--- a/index.html
+++ b/index.html
@@ -401,6 +401,24 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe">
+          <label for="users-email" class="subscribe-label">Подпишитесь на рассылку</label>
+          <div class="subscribe-form">
+            <input
+              type="email"
+              name="e-mail"
+              id="users-email"
+              placeholder="E-mail"
+              class="subscribe-form"
+            />
+            <button type="button" class="subscribe-btn">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#send-icon"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -410,6 +428,45 @@
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
         </button>
+
+        <form class="modal-form">
+          <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+          <div class="modal-data">
+            <label class="modal-data-label" for="user-name">Имя</label>
+            <input class="modal-data-input" type="text" name="name" id="user-name" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#user-icon"></use>
+            </svg>
+            <label class="modal-data-label" for="user-tel">Телефон</label>
+            <input class="modal-data-input" type="tel" name="tel" id="user-tel" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#phone-icon"></use>
+            </svg>
+            <label class="modal-data-label" for="user-email">Почта</label>
+            <input class="modal-data-input" type="email" name="e-mail" id="user-email" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#mail-icon"></use>
+            </svg>
+            <label class="modal-data-label" for="coment">Комментарий</label>
+            <textarea
+              class="modal-textarea"
+              name="coment"
+              id="coment"
+              rows="10"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+
+          <ul class="modal-agree list">
+            <li>
+              <label>
+                <input type="checkbox" />
+                Соглашаюсь с рассылкой и принимаю Условия договора</label
+              >
+            </li>
+          </ul>
+          <button type="submit" class="modal-btn">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
