--- a/index.html
+++ b/index.html
@@ -437,16 +437,22 @@
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#user-icon"></use>
             </svg>
+          </div>
+          <div class="modal-data">
             <label class="modal-data-label" for="user-tel">Телефон</label>
             <input class="modal-data-input" type="tel" name="tel" id="user-tel" />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#phone-icon"></use>
             </svg>
+          </div>
+          <div class="modal-data">
             <label class="modal-data-label" for="user-email">Почта</label>
             <input class="modal-data-input" type="email" name="e-mail" id="user-email" />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#mail-icon"></use>
             </svg>
+          </div>
+          <div class="modal-data">
             <label class="modal-data-label" for="coment">Комментарий</label>
             <textarea
               class="modal-textarea"
@@ -456,15 +462,16 @@
               placeholder="Введите текст"
             ></textarea>
           </div>
-
-          <ul class="modal-agree list">
-            <li>
+          <div class="modal-agree">
+            <span class="modal-checkbox">
               <label>
                 <input type="checkbox" />
-                Соглашаюсь с рассылкой и принимаю Условия договора</label
-              >
-            </li>
-          </ul>
+                Соглашаюсь с рассылкой и принимаю
+                <a href="">Условия договора</a>
+              </label>
+            </span>
+          </div>
+
           <button type="submit" class="modal-btn">Отправить</button>
         </form>
       </div>
