изменил футер в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -346,6 +346,24 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe">
+          <label for="users-email" class="subscribe-label">Подпишитесь на рассылку</label>
+          <div class="subscribe-form">
+            <input
+              type="email"
+              name="e-mail"
+              id="users-email"
+              placeholder="E-mail"
+              class="subscribe-form"
+            />
+            <button type="button" class="subscribe-btn">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#send-icon"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
