оформил кастомный чекбокс

--- a/index.html
+++ b/index.html
@@ -475,14 +475,15 @@
               placeholder="Введите текст"
             ></textarea>
           </div>
-          <div class="modal-agree">
-            <span class="modal-checkbox">
-              <label>
-                <input type="checkbox" />
-                Соглашаюсь с рассылкой и принимаю
-                <a href="">Условия договора</a>
-              </label>
-            </span>
+          <div class="modal-checkbox">
+            <label class="checkbox-label">
+              <input type="checkbox" class="checkbox-input" />
+              <span class="checkbox-icon"></span>
+            </label>
+            <p class="checkbox-text">
+              Соглашаюсь с рассылкой и принимаю
+              <a href="" class="checkbox-text-agree">Условия договора</a>
+            </p>
           </div>
 
           <button type="submit" class="modal-btn">Отправить</button>
