--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
         </form>
       </div>
     </footer>
+    <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-icon" data-modal-close>
@@ -477,7 +478,7 @@
           </div>
           <div class="modal-checkbox">
             <label class="checkbox-label">
-              <input type="checkbox" class="checkbox-input" />
+              <input type="checkbox" class="checkbox-input visually-hidden" />
               <span class="checkbox-icon"></span>
             </label>
             <p class="checkbox-text">
