добавил чекбокс в спрайте

--- a/index.html
+++ b/index.html
@@ -476,15 +476,40 @@
               placeholder="Введите текст"
             ></textarea>
           </div>
-          <div class="modal-checkbox">
+
+          <!-- /* Checkbox в CSS */ -->
+
+          <!-- <div class="modal-checkbox">
             <label class="checkbox-label">
               <input type="checkbox" class="checkbox-input visually-hidden" />
               <span class="checkbox-icon"></span>
+              <p class="checkbox-text">
+                Соглашаюсь с рассылкой и принимаю
+                <a href="" class="checkbox-text-agree">Условия договора</a>
+              </p>
             </label>
-            <p class="checkbox-text">
-              Соглашаюсь с рассылкой и принимаю
-              <a href="" class="checkbox-text-agree">Условия договора</a>
-            </p>
+          </div> -->
+
+          <!-- /* Checkbox в спрайте */ -->
+
+          <div class="modal-checkbox">
+            <input
+              type="checkbox"
+              name="checkbox-agree"
+              id="checkbox-agree"
+              class="checkbox-input visually-hidden"
+            />
+            <label for="checkbox-agree" class="checkbox-label">
+              <span>
+                <svg class="checkbox-icon" width="16" height="15">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              <p>
+                Соглашаюсь с рассылкой и принимаю
+                <a href="" class="checkbox-text-agree">Условия договора</a>
+              </p>
+            </label>
           </div>
 
           <button type="submit" class="modal-btn">Отправить</button>
