--- a/index.html
+++ b/index.html
@@ -429,44 +429,54 @@
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
         </button>
-
+        <!-- MODAL -->
         <form class="modal-form">
           <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+
           <div class="modal-data">
             <label class="modal-data-label" for="user-name">Имя</label>
-            <input
-              class="modal-data-input"
-              type="text"
-              name="name"
-              id="user-name"
-              minlength="2"
-              required
-            />
-            <svg class="modal-icon" width="18" height="18">
-              <use href="./images/icons.svg#user-icon"></use>
-            </svg>
+            <div class="modal-icon">
+              <input
+                class="modal-data-input"
+                type="text"
+                name="name"
+                id="user-name"
+                minlength="2"
+                required
+              />
+              <svg class="modal-logo-icon" width="18" height="18">
+                <use href="./images/icons.svg#user-icon"></use>
+              </svg>
+            </div>
           </div>
+
           <div class="modal-data">
             <label class="modal-data-label" for="user-tel">Телефон</label>
-            <input
-              class="modal-data-input"
-              type="tel"
-              name="tel"
-              id="user-tel"
-              minlength="8"
-              required
-            />
-            <svg class="modal-icon" width="18" height="18">
-              <use href="./images/icons.svg#phone-icon"></use>
-            </svg>
+            <div class="modal-icon">
+              <input
+                class="modal-data-input"
+                type="tel"
+                name="tel"
+                id="user-tel"
+                minlength="8"
+                required
+              />
+              <svg class="modal-logo-icon" width="18" height="18">
+                <use href="./images/icons.svg#phone-icon"></use>
+              </svg>
+            </div>
           </div>
+
           <div class="modal-data">
-            <label class="modal-data-label" for="user-email">Почта</label>
-            <input class="modal-data-input" type="email" name="e-mail" id="user-email" required />
-            <svg class="modal-icon" width="18" height="18">
-              <use href="./images/icons.svg#mail-icon"></use>
-            </svg>
+            <label class="modal-data-label" for="user-email">Телефон</label>
+            <div class="modal-icon">
+              <input class="modal-data-input" type="email" name="email" id="user-email" required />
+              <svg class="modal-logo-icon" width="18" height="18">
+                <use href="./images/icons.svg#mail-black-icon"></use>
+              </svg>
+            </div>
           </div>
+
           <div class="modal-data">
             <label class="modal-data-label" for="coment">Комментарий</label>
             <textarea
